[package]
name = "mcdl"
version = "0.1.0"
edition = "2024"
authors = ["Oxidized Steve <oxidized-steve@outlook.com>"]

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
futures-core = "0.3.31"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
